# drone-swarm-lab

./: AGENTS.md  CLAUDE.md  Cargo.toml  DRONE_A.0.md  DRONE_A.2.md  DRONE_B.1.md  DRONE_B.3.md  LICENSE  PLAN.md  README.md
crates/swarm-comms/: Cargo.toml
crates/swarm-comms/src/: connectivity.rs  drone_link.rs  lib.rs  mavlink.rs  mavlink_capability_profile.rs  mavlink_common_plan.rs  mavlink_coords.rs  mavlink_executor.rs  mavlink_fc_contract.rs  mavlink_geofence.rs  mavlink_parameters.rs  network.rs  swarm_protocol.rs  transport.rs  udp.rs
crates/swarm-comms/src/mavlink/: commands.rs  commands_and_conversion.rs  errors.rs  lifecycle.rs  mission_execution.rs  mission_items.rs  mission_upload.rs  mod.rs  observer.rs  telemetry.rs  tests_core.rs  tests_mission_upload.rs  transport.rs  types.rs  types_and_transport.rs
crates/swarm-comms/src/mavlink_parts/: commands_and_conversion.rs  mission_execution.rs  tests_core.rs  tests_mission_upload.rs  types_and_transport.rs
crates/swarm-examples/: Cargo.toml
crates/swarm-examples/src/: artifact_validator.rs  benchmark_stress_profile.rs  drone_agent_runtime.rs  hardware_entry.rs  lib.rs  realism.rs  regression_lib.rs  sitl_connection.rs  sitl_dual_stack_evidence.rs  sitl_multi_agent.rs  sitl_observability.rs  sitl_plan.rs  sitl_progress.rs  sitl_report.rs  sitl_safety.rs  sitl_supervisor.rs  sitl_supervisor_cli.rs
crates/swarm-examples/src/sitl_agent_runtime/: cli.rs  cli_and_mock.rs  connection.rs  connection_and_reports.rs  mock.rs  mod.rs  reports.rs  runtime.rs  telemetry.rs  tests.rs
crates/swarm-examples/src/sitl_observability/: events.rs  events_and_io.rs  io.rs  mod.rs  read.rs  read_and_tests.rs  read_tests.rs
crates/swarm-examples/src/sitl_observability_parts/: events_and_io.rs  read_and_tests.rs
crates/swarm-examples/src/sitl_supervisor/: artifacts.rs  config.rs  config_and_controllers.rs  controller_helpers.rs  degraded.rs  events.rs  live.rs  live_helpers.rs  mock.rs  mock_runtime.rs  mod.rs  ports.rs  reallocation.rs  supervisor_flows.rs  tests_cases.rs  tests_support.rs  validation_and_reports.rs
crates/swarm-examples/src/sitl_supervisor_cli/: cli.rs  exit_codes.rs  mod.rs  output.rs  run.rs
crates/swarm-examples/src/sitl_supervisor_parts/: config_and_controllers.rs  reallocation.rs  supervisor_flows.rs  tests_cases.rs  tests_support.rs  validation_and_reports.rs
crates/swarm-examples/src/strategy_comparison_runtime/: cli.rs  cli_and_runs.rs  missions.rs  mod.rs  runs.rs  strategies.rs  urban_artifacts.rs  urban_artifacts_and_tests.rs
crates/swarm-examples/tests/: artifact_validator.rs  benchmark_pack.rs  regression.rs  replay_cli.rs  sitl_agent.rs  sitl_docs.rs  support_matrix.rs  wildfire.rs
crates/swarm-examples/tests/sitl_agent/: cli_and_connection_tests.rs  report_and_boundary_tests.rs  supervisor_tests.rs
crates/swarm-examples/tests/sitl_agent_parts/: cli_and_connection_tests.rs  report_and_boundary_tests.rs  supervisor_tests.rs
crates/swarm-runtime/: Cargo.toml
crates/swarm-runtime/src/: autonomy.rs  coordinator.rs  error.rs  failure.rs  grid_state.rs  lib.rs  membership.rs  message.rs  node.rs  task_registry.rs
crates/swarm-runtime/src/node/: gossip.rs  mod.rs  reallocation.rs  runtime.rs  tests.rs
crates/swarm-runtime/src/node_parts/: tests.rs
crates/swarm-scenarios/: Cargo.toml
crates/swarm-scenarios/src/: auction.rs  coverage.rs  emergency_mesh.rs  generated.rs  inspection.rs  lib.rs  partition.rs  profiles.rs  sar_scenario.rs  urban.rs  wildfire.rs
crates/swarm-scenarios/tests/: proptest_generators.rs
crates/swarm-sim/: Cargo.toml
crates/swarm-sim/src/: benchmark.rs  clock.rs  dsl.rs  fc_bridge.rs  lib.rs  preflight.rs  regression.rs  report_export.rs  runner.rs  scenario.rs  support_matrix.rs  urban.rs  urban_analysis.rs
crates/swarm-sim/src/benchmark/: aggregation.rs  harness.rs  markdown.rs  mod.rs  report.rs  tests.rs
crates/swarm-sim/src/dsl/: export.rs  load.rs  mod.rs  tests.rs  types.rs  urban_validate.rs  validate.rs
crates/swarm-sim/src/dsl_parts/: dsl.rs  tests.rs
crates/swarm-sim/src/regression/: mod.rs  runner.rs  suites.rs  suites_and_tests.rs  suites_tests.rs  types.rs  types_and_runner.rs
crates/swarm-sim/src/regression_parts/: suites_and_tests.rs  types_and_runner.rs
crates/swarm-sim/src/report_export/: compare.rs  compare_and_tests.rs  compare_tests.rs  csv.rs  export_formats.rs  exports_and_manifest.rs  focused.rs  identity.rs  json.rs  manifest.rs  markdown.rs  mod.rs  report_compare.rs
crates/swarm-sim/src/report_export_parts/: compare_and_tests.rs  exports_and_manifest.rs
crates/swarm-sim/src/runner/: mod.rs  scenario_runner_internal.rs  scenario_runner_public.rs  scenario_runner_urban.rs  tests.rs  types.rs  urban_events.rs  urban_helpers.rs  urban_metrics.rs  urban_patrol.rs  urban_search.rs
crates/swarm-sim/src/runner/internal/: allocation.rs  dynamic_tasks.rs  events.rs  final_metrics.rs  inspection.rs  loop_state.rs  mission_success.rs  mod.rs  movement.rs  network.rs  partition_supervisor.rs  partitions.rs  safety.rs  sar.rs  tick_loop.rs  wildfire.rs
crates/swarm-sim/src/runner_parts/: scenario_runner_internal.rs  scenario_runner_public.rs  scenario_runner_urban.rs  tests.rs  types.rs  urban_helpers.rs
crates/swarm-sim/src/urban/: deconfliction.rs  detection.rs  geojson_import.rs  geometry.rs  judge.rs  mod.rs  obstacle.rs  operational_evidence.rs  planner.rs  risk.rs  route_export.rs  segment_coordinator.rs  tests.rs
crates/swarm-sim/src/urban_analysis/: events.rs  judge_report.rs  mod.rs  separation.rs  tests.rs  trace.rs  writers.rs
crates/swarm-sim/src/urban_parts/: planner.rs  tests.rs
crates/swarm-sim/tests/: proptest_cbba.rs  proptest_runner.rs  safety_integration.rs  scenario_catalog.rs  smoke_suites.rs  strategy_correctness.rs
docs/: ARDUPILOT_SITL.md  ARTIFACT_VALIDATION.md  BENCHMARK_RESULTS.md  DEGRADED_SUPERVISOR.md  DRONE_A.1.md  DRONE_A.10.linear.md  DRONE_A.3.md  DRONE_B.0.md  DRONE_B.6.md  DRONE_B.7.md  DRONE_B.9.branches.md  DRONE_LINK.md  EXTENSION_GUIDE.md  FC_CONTRACT.md  PREFLIGHT_SAFETY.md  (+13 more)
(+338 files in other folders)
