[workspace]
resolver = "2"
members = [
    "crates/swarm-types",
    "crates/swarm-comms",
    "crates/swarm-sim",
    "crates/swarm-runtime",
    "crates/swarm-alloc",
    "crates/swarm-metrics",
    "crates/swarm-replay",
    "crates/swarm-scenarios",
    "crates/swarm-examples",
    "crates/swarm-safety",
]

[workspace.package]
license = "MIT"

[workspace.dependencies]
swarm-types = { path = "crates/swarm-types" }
swarm-comms = { path = "crates/swarm-comms" }
swarm-sim   = { path = "crates/swarm-sim" }
swarm-runtime   = { path = "crates/swarm-runtime" }
swarm-alloc     = { path = "crates/swarm-alloc" }
swarm-metrics   = { path = "crates/swarm-metrics" }
swarm-replay    = { path = "crates/swarm-replay" }
swarm-scenarios = { path = "crates/swarm-scenarios" }
swarm-safety      = { path = "crates/swarm-safety" }
chrono             = "0.4"
csv                = "1"
derive_more        = { version = "2", features = ["as_ref", "deref", "deref_mut", "display", "from", "into"] }
proptest           = "1"
rand               = { version = "0.8", features = ["small_rng"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
rayon              = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mavlink = "0.18"
