[package]
name    = "swarm-comms"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
swarm-types = { workspace = true }
rand        = { workspace = true }
derive_more = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
swarm-mission-ir = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
mavlink     = { workspace = true, optional = true }

[features]
default = []
mavlink-transport = ["mavlink"]
