[package]
name    = "swarm-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "empty_scenario"
path = "src/bin/empty_scenario.rs"

[[bin]]
name = "coverage_with_failure"
path = "src/bin/coverage_with_failure.rs"

[[bin]]
name = "dynamic_auction"
path = "src/bin/dynamic_auction.rs"

[[bin]]
name = "agent_process"
path = "src/bin/agent_process.rs"

[[bin]]
name = "multiprocess_scenario"
path = "src/bin/multiprocess_scenario.rs"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
swarm-alloc        = { workspace = true }
swarm-comms        = { workspace = true }
swarm-metrics      = { workspace = true }
swarm-runtime      = { workspace = true }
swarm-scenarios    = { workspace = true }
swarm-sim          = { workspace = true }
swarm-types        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
