[package]
name    = "swarm-examples"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "empty_scenario"
path = "src/bin/empty_scenario.rs"

[[bin]]
name = "coverage_with_failure"
path = "src/bin/coverage_with_failure.rs"

[[bin]]
name = "dynamic_auction"
path = "src/bin/dynamic_auction.rs"

[[bin]]
name = "agent_process"
path = "src/bin/agent_process.rs"

[[bin]]
name = "multiprocess_scenario"
path = "src/bin/multiprocess_scenario.rs"

[[bin]]
name = "partition_scenario"
path = "src/bin/partition_scenario.rs"

[[bin]]
name = "strategy_comparison"
path = "src/bin/strategy_comparison.rs"

[[bin]]
name = "sitl_agent"
path = "src/bin/sitl_agent.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
swarm-alloc        = { workspace = true }
swarm-comms        = { workspace = true }
swarm-metrics      = { workspace = true }
swarm-replay       = { workspace = true }
swarm-runtime      = { workspace = true }
swarm-scenarios    = { workspace = true }
swarm-sim          = { workspace = true }
swarm-types        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
mavlink-transport = ["swarm-comms/mavlink-transport"]
