[package]
name    = "swarm-examples"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "partition_scenario"
path = "src/bin/partition_scenario.rs"

[[bin]]
name = "strategy_comparison"
path = "src/bin/strategy_comparison.rs"

[[bin]]
name = "sitl_agent"
path = "src/bin/sitl_agent.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"

[[bin]]
name = "regression_runner"
path = "src/bin/regression_runner.rs"

[[bin]]
name = "artifact_validator"
path = "src/bin/artifact_validator.rs"

[[bin]]
name = "sitl_dual_stack_evidence"
path = "src/bin/sitl_dual_stack_evidence.rs"

[dependencies]
chrono             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
swarm-alloc        = { workspace = true }
swarm-command-plane = { workspace = true }
swarm-comms        = { workspace = true }
swarm-metrics      = { workspace = true }
swarm-mission-ir   = { workspace = true }
swarm-replay       = { workspace = true }
swarm-runtime      = { workspace = true }
swarm-safety       = { workspace = true }
swarm-scenarios    = { workspace = true }
swarm-sim          = { workspace = true }
swarm-types        = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mavlink  = { workspace = true }
tempfile = { workspace = true }

[features]
mavlink-transport = ["swarm-comms/mavlink-transport"]
