[package]
name    = "swarm-runtime"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
chrono      = { workspace = true }
rand        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
swarm-alloc = { workspace = true }
swarm-comms = { workspace = true }
swarm-types = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
