[package]
name    = "swarm-scenarios"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
rand = { workspace = true }
swarm-runtime = { workspace = true }
swarm-sim = { workspace = true }
swarm-types = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
swarm-alloc = { workspace = true }
swarm-replay = { workspace = true }
serde_json = { workspace = true }
